--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
     "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "ng2-charts": "^4.1.1",
