--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.4",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@types/chart.js": "^2.9.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "ng2-charts": "^4.1.1",
