--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^16.0.4",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/chart.js": "^2.9.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
@@ -31,7 +33,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.3",
+    "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "~16.0.3",
     "@angular/compiler-cli": "^16.0.4",
     "@types/jasmine": "~4.3.0",
