--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.0.4",
     "@angular/compiler": "^16.0.4",
     "@angular/core": "^16.0.4",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.4",
     "@angular/material": "^16.0.3",
     "@angular/platform-browser": "^16.0.4",
@@ -26,16 +27,18 @@
     "@types/chart.js": "^2.9.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "firebase": "^9.22.2",
     "ng2-charts": "^4.1.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "^16.0.4",
+    "@angular/compiler-cli": "^16.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~5.0.1",
     "karma": "~6.4.0",
